--- a/plugin.xml
+++ b/plugin.xml
@@ -14,7 +14,7 @@
     <platform name="android">
         <config-file parent="/*" target="res/xml/config.xml">
             <feature name="RegoPrinterPlugin">
-                <param name="android-package" value="cordova.plugin.regoprinter" />
+                <param name="android-package" value="cordova.plugin.regoprinter.RegoPrinterPlugin" />
             </feature>
         </config-file>
 
